; ModuleID = '/home/carl/AnghaBench/libevent/sample/extr_watch-timing.c_on_prepare.c'
source_filename = "/home/carl/AnghaBench/libevent/sample/extr_watch-timing.c_on_prepare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }
%struct.evwatch = type { i32 }
%struct.evwatch_prepare_cb_info = type { i32 }
%struct.timeval = type { x86_fp80, i64, [8 x i8] }

@prepare_time = common dso_local global i32 0, align 4
@expected = common dso_local global i32 0, align 4
@check_time = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@durations = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.evwatch*, %struct.evwatch_prepare_cb_info*, i8*)* @on_prepare to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @on_prepare(%struct.evwatch* %0, %struct.evwatch_prepare_cb_info* %1, i8* %2) #0 {
  %4 = alloca %struct.evwatch*, align 8
  %5 = alloca %struct.evwatch_prepare_cb_info*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.timeval, align 16
  store %struct.evwatch* %0, %struct.evwatch** %4, align 8
  store %struct.evwatch_prepare_cb_info* %1, %struct.evwatch_prepare_cb_info** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = call i32 @evutil_gettimeofday(i32* @prepare_time, i32* null)
  %9 = load %struct.evwatch_prepare_cb_info*, %struct.evwatch_prepare_cb_info** %5, align 8
  %10 = call i32 @evwatch_prepare_get_timeout(%struct.evwatch_prepare_cb_info* %9, i32* @expected)
  %11 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @check_time, i32 0, i32 0), align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %25

13:                                               ; preds = %3
  %14 = call i32 @evutil_timersub(i32* @prepare_time, %struct.TYPE_3__* @check_time, %struct.timeval* %7)
  %15 = load i32, i32* @durations, align 4
  %16 = getelementptr inbounds %struct.timeval, %struct.timeval* %7, i32 0, i32 1
  %17 = load i64, i64* %16, align 16
  %18 = sitofp i64 %17 to x86_fp80
  %19 = getelementptr inbounds %struct.timeval, %struct.timeval* %7, i32 0, i32 0
  %20 = load x86_fp80, x86_fp80* %19, align 16
  %21 = fdiv x86_fp80 %20, 0xK4012F424000000000000
  %22 = fadd x86_fp80 %18, %21
  %23 = fptosi x86_fp80 %22 to i64
  %24 = call i32 @histogram_update(i32 %15, i64 %23)
  br label %25

25:                                               ; preds = %13, %3
  ret void
}

declare dso_local i32 @evutil_gettimeofday(i32*, i32*) #1

declare dso_local i32 @evwatch_prepare_get_timeout(%struct.evwatch_prepare_cb_info*, i32*) #1

declare dso_local i32 @evutil_timersub(i32*, %struct.TYPE_3__*, %struct.timeval*) #1

declare dso_local i32 @histogram_update(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
